Finish formatting and briefly revising all articles.

--- a/source/partials/_chartist-js.html.erb
+++ b/source/partials/_chartist-js.html.erb
@@ -3,3 +3,4 @@
 <script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
 <script src="/javascripts/vendor/chartist-plugin-accessibility.min.js"></script>
 <script src="/javascripts/vendor/chartist-plugin-legend.js"></script>
+<script src="/javascripts/blocks/chartist-options.js"></script>
