--- a/source/reflections/reflection-1.html.md.erb
+++ b/source/reflections/reflection-1.html.md.erb
@@ -1,10 +1,12 @@
+<% partial "/partials/article-layout" do %>
+
 # Reflection #1: The Assessment
 
 The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.
 
 ## The small mistakes
 
-In an effort to get the ball rolling, I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK) on July 8th. It was premature, as I would only complete the framework for practicing and publishing results four months later. Mistakes peppered the initial assessment from lack of preparation and because I was doing something relatively complex for the first time. I practiced hands apart before practicing hands together, which I no longer include as a metric.<sup>1</sup> I didn't give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and I was keeping track of what I would practice, not what I was able to do.<sup>2</sup>
+In an effort to get the ball rolling, I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK) on July 8th. It was premature, as I would only complete the framework for practicing and publishing results four months later. Mistakes peppered the initial assessment from lack of preparation and because I was doing something relatively complex for the first time. I practiced hands apart before practicing hands together, which I no longer include as a metric.[^1] I didn't give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and I was keeping track of what I would practice, not what I was able to do.[^2]
 
 ## The blunder
 
@@ -22,16 +24,18 @@ This still left a question: why did I improve so much between the each assessmen
 
 ## A return to form
 
-In the second two practice sessions I took more time become familiar with the material before I assessed myself. Also the impact of a few juicy REM cycles shouldn't be underestimated, but neither of these can fully explain the massive improvement. In around an hour (**CHECK THIS)** of assessing, I had gone from 0 completed increments to 53. In the next eight hours of practicing scales (over the next 32 practice sessions), I only completed 50 increments.
+In the second two practice sessions I took more time become familiar with the material before I assessed myself. Also the impact of a few juicy REM cycles shouldn't be underestimated, but neither of these can fully explain the massive improvement. In around an hour (**CHECK THIS)** of assessing, I had gone from 0 completed increments to 53. In retrospect, I can see that in the next eight hours of practicing scales (over the next 32 practice sessions), I only completed 50 increments.
 
 I believe that I improved quickly because I was not learning these skills for the first time. Instead it was a return to form, my brain reclaiming my keyboard skills after a year of stagnation. The speed of improvement, although aided by REM cycles and practice, is mostly due to fact that I was not learning these skills but remembering them.
 
-This means my initial assessment might not be nearly as useful as I thought. I did this assessment to get an initial snapshot of how good I am at each keyboard. But if this is any indication, I might continue to improve rapidly on the TK (and possibly the LIK) in the early practice sessions as I return to the level that I was at about a year ago.<sup>3</sup>
+This means my initial assessment might not be nearly as useful as I thought. I did this assessment to get an initial snapshot of how good I am at each keyboard. But if this is any indication, I might continue to improve rapidly on the TK (and possibly the LIK) in the early practice sessions as I return to the level that I was at about a year ago.[^3]
 
 Despite the multitude of mistakes, the initial assessment provided what I wanted and more: it is an snapshot of my initial abilities, and it taught me that the improvement in the early practice sessions could be explosive, and should be taken with a grain of salt.
 
-1.  By the time I recorded the second assessment, I was going through the process of removing the metric of playing hands apart at 60bpm. Now the easiest increment for a scale is 60bpm hands together, and I do not assess if I am able to hands apart. I chose this because I figured that I should be practicing hands together whenever possible. If I can't practice hands together then I will play hands apart at my own tempo, before practicing hands together at my own tempo. From there I would increase tempo until I had 60bpm.
+[^1]: By the time I recorded the second assessment, I was going through the process of removing the metric of playing hands apart at 60bpm. Now the easiest increment for a scale is 60bpm hands together, and I do not assess if I am able to hands apart. I chose this because I figured that I should be practicing hands together whenever possible. If I can't practice hands together then I will play hands apart at my own tempo, before practicing hands together at my own tempo. From there I would increase tempo until I had 60bpm.
 
-2.  This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. This was fixed post-assessment. When inputting data, I didn't listen to what I said or notated and instead I listened through my assessments a second time through to determine what I was able to do.
+[^2]: This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. This was fixed post-assessment. When inputting data, I didn't listen to what I said or notated and instead I listened through my assessments a second time through to determine what I was able to do.
 
-3.  Looking back, it appears I had reclaimed most of my previous skill in the assessment. My improvement on the major scale in the first six practice sessions was minimal. However, it is possible that I see similar bursts in improvement when I initially begin practicing the other minor scales.
+[^3]: Looking back, it appears I had reclaimed most of my previous skill in the assessment. My improvement on the major scale in the first six practice sessions was minimal. However, it is possible that I see similar bursts in improvement when I initially begin practicing the other minor scales.
+
+<% end %>
