--- a/source/reflections/reflection-3.html.md.erb
+++ b/source/reflections/reflection-3.html.md.erb
@@ -1,4 +1,8 @@
-**ADD CHARTS FOR EACH OF THE CONTENT SECTIONS**
+<%= partial "partials/chartist-js" %>
+
+<% practice_sessions = data.practice_sessions.select { |ps| ps.number <= 33 } %>
+
+<% partial "/partials/article-layout" do %>
 
 # Reflection #3: 33 hours
 
@@ -10,6 +14,14 @@ I have practiced roughly 33 hours on each keyboard, and the results are already 
 
 The thirty second practice session marked an important point in the progress of the LIK: in regard to the number of completed intervals, my ability to play major scales on the LIK has surpassed my ability to play the major scale on the TK. The improvement of the LIK on major scales started slow as I had difficulty with the fingerings (and still do), but once I was able to play the major scale without looking at 60bpm, the LIKstarted completing many increments. I completed five increments in the first 19 practice sessions (4 hours and 45 minutes of practice), and then I completed another 116 increments in the next 14 practice sessions (3 hours and 30 minutes of practice). To average this out, in the last 14 practice sessions, I've been improving at a rate of 8.29 (116 / 14) increments per practice session, while the TK is sitting at 1.9 (63 / 33) increments per practice session.
 
+<div class="reflection-chart scales-chart"></div>
+
+<% scales = data.exercise_sets.find { |es| es.name == "Scales & Arpeggios" } %>
+<script>
+  var scales_data = <%= exercise_set_progress(scales, practice_sessions).to_json %>
+  new Chartist.Line('.scales-chart', scales_data, basicOptions);
+</script>
+
 The LIK might slow down at it approaches the fastest tempo that I can play on the TK, but even the LIK will continue to outpace the TK with the advantage of transposition.
 
 This is quite exciting, and it's interesting to compare theoretical numbers with. [My hypothesis](https://likeyboard.io/articles/the-hypotheses/) is that the LIK will improve at 3.58 times the pace, and currently the LIK is improving at 4.34 (8.29 / 1.91) times the speed of the TK.
@@ -20,17 +32,35 @@ The TK is improving at a pretty constant rate while the LIK hasn't had any notab
 
 On the TK I can play the C major scale with sixteenth notes at 80bpm, and I can play the Hanon exercises right around that speed. The LIK can only play the C major scale at 100bpm in eighth notes, so I would expect that the LIK would have to be able to play at least sixteenth notes at 60bpm to play the first (and slowest) Hanon increment. However, currently I can play the C Major scale at 100bpm (eighth notes), but I can only play the first exercise with eighth notes at 69 bpm. I think that the reason for this is that Hanon is more complex on the LIK.
 
+<div class="reflection-chart hanon-chart"></div>
+
+<% hanon = data.exercise_sets.find { |es| es.name == "Hanon" } %>
+<script>
+  var hanon_data = <%= exercise_set_progress(hanon, practice_sessions).to_json %>
+  new Chartist.Line('.hanon-chart', hanon_data, basicOptions);
+</script>
+
 We can see a difference in complexity when we consider the number of patterns that each keyboard has to learn for a Hanon exercise. When playing the TK you have to learn two unique shapes, the ascending pattern and the descending pattern. On the LIK you have to learn fourteen unique shapes as the ascending and descending shapes are different for each starting note. There are similarities between these fourteen patterns, but they are still unique.
 
 My hypothesis is that I am still improving at the rate of 2.33 times the speed of the TK, but the LIK is practicing fourteen patterns rather than two. In addition, [I hypothesized](https://likeyboard.io/articles/the-hypotheses/) that this advantage (of the LIK having 2.33 times fewer shapes than the TK) will not be manifest itself until I have practiced a considerable amount of both keyboards.
 
 ### Sight reading
 
-Since removing sixteenth notes from the exercises, both the TK and the LIK have begun improving at a steady pace with the TK consistently in the lead. Currently the LIK has completed seven increments while the TK has completed twelve. The gap between the two started at three increments around the fifteenth practice session, and has now increased to six.
+Since removing sixteenth notes from the exercises, both the TK and the LIK have begun improving at a steady pace with the TK consistently in the lead. Currently the LIK has completed seven increments while the TK has completed twelve. Eighteen practice sessions ago the gap was two increments apart, and the gap has widened to five increments.
 
-I do have concerns about the increments, as I am going to be increasing the largest interval from the fourth all the way up to the full pitch range of the keyboard (although EarMaster seems to limit leaps to about an octave and half). I wonder if that will be too difficult, especially if the leaps are strung together. This will be difficult for the TK, but it might be extremely difficult for the LIK as the lack of distinct shapes makes it so there are no reference points that can be felt, only seen. This same incrementing also applies to playing by ear, but I am not as concerned as I think it'll be easier to make larger leaps playing by ear instead of sight reading.
+<div class="reflection-chart sight-reading-chart"></div>
 
-#### Reflecting and improving
+<% sight_reading = data.exercise_sets.find { |es| es.name == "EarMaster Sight Reading" } %>
+<script>
+  var sight_reading_data = <%= exercise_set_progress(sight_reading, practice_sessions).to_json %>
+  new Chartist.Line('.sight-reading-chart', sight_reading_data, basicOptions);
+</script>
+
+I do have concerns about the increments, as I am going to be increasing the largest interval from the fourth all the way up to the full pitch range of the keyboard (although EarMaster seems to limit leaps to about an octave and half). I wonder if that will be too difficult, especially if the leaps are strung together. This will be difficult for both keyboards, but the LIK might struggle even more as the lack of distinct shapes makes it so there are no reference points that can be felt, only seen. This same incrementing also applies to playing by ear, but I am not as concerned as I think it'll be easier to make larger leaps playing by ear instead of sight reading.
+
+## Reflecting and improving
+
+### Sight reading
 
 I did some reflection on my process of sight reading, and how I could improve on each keyboard. What I found is discussed in [The Hypotheses](https://likeyboard.io/articles/the-hypotheses/), but the gist of it is that I don't determine the true interval (minor 3rd vs 3rd) between note when sight reading, and instead find the white key that has the distance of the interval, and then I augment or diminish the note depending on the key signature and accidentals. I figured that for the traditional keyboard, I could improve my sight reading by practicing identifying the exact note names. To practice this, I have begun singing the note names while sight reading.
 
@@ -42,13 +72,13 @@ Going forward, when sight reading on the LIK I will try to sing the excerpts in 
 
 ### Playing by ear
 
-Similar to sight reading, the removal of sixteenth notes from the exercise prompted a stream of measurable improvements from both keyboards. The TK is better than the LIK, bu it has not been improving considerably faster; it has been hovering around an advantage of three intervals, the TK having completed 14 and the LIK 11.
+Similar to sight reading, the removal of sixteenth notes from the exercise prompted a stream of measurable improvements from both keyboards. The TK is better than the LIK, but it has not been improving considerably faster; it has been hovering around an advantage of three intervals, the TK having completed 14 and the LIK 11.
 
 My hypothesis of the LIK improving at 1.8125 times the speed of the TK has proven not be true so far, and I think that the reason why is because I am not solely identifying notes by the interval, but also with tonal awareness. I am surprised by the extent to which I find notes by tonal position, as it is pretty easy to identify certain notes like the tonic or the 7th. Instead of determining how large the leap is, I identify the note by its position relative to the tonic. This seems to help me more on the TK, as it is easier to find notes on that keyboard.
 
 However, I have noticed with increasing frequency that there are times when I don't have this tonal awareness and I am able to play a leap by listening to interval and using muscle memory. I think that this is the manifestation of the 1.8125 times advantage, solely determining the shape by the sound of the interval. I predict that I will improve at playing by ear this way, especially on the LIK, and the LIK could start to surpass the traditional keyboard.
 
-#### Deciding when to increase difficulty
+### Deciding when to increase difficulty
 
 For a while, deciding when to increase the difficulty for these exercises has been painfully subjective and subject to luck. I would try to guess when a more difficult increment would be beneficial based on my performance, and that performance would vary depending on the difficulty of the generated excerpts.
 
@@ -63,3 +93,5 @@ This objective measure of performance from EarMaster will aid me greatly in dete
 This point of reflection has been one of the most interesting parts of this experiment so far. The LIK has surpassed the TK in scales at a rate that is faster than I predicted, and my slow improvement at the other exercises on the LIK has lead me to insights about the complexity of Hanon and my methods of sight reading that change both my predictions of future improvement and my methods of practicing the exercises.
 
 I have taken a break from practicing to work on this site and rewrite the articles, but I am excited to get back to practicing and find what new insights the next practice sessions have to offer.
+
+<% end %>
