Fix keyboard rendering so it is scalable and has 3 octaves.

--- a/source/animate.html.erb
+++ b/source/animate.html.erb
@@ -1,34 +1,56 @@
-
-<div class="animate-container">
-  <div class="octave">
-    <div class="white-key C"></div>
-    <div class="black-key C#"></div>
-    <div class="white-key D"></div>
-    <div class="black-key D#"></div>
-    <div class="white-key E"></div>
-    <div class="white-key F"></div>
-    <div class="black-key F#"></div>
-    <div class="white-key G"></div>
-    <div class="black-key G#"></div>
-    <div class="white-key A"></div>
-    <div class="black-key A#"></div>
-    <div class="white-key B"></div>
-  
-
-    <div class="overlay">
-      <div class="white-chonk white-chonk--skinny"></div>
-      <div class="white-chonk white-chonk--skinny"></div>
-      <div class="white-chonk white-chonk--skinny"></div>
-      <div class="white-chonk white-chonk--thicc"></div>
-      <div class="white-chonk white-chonk--thicc"></div>
-      <div class="white-chonk white-chonk--thicc"></div>
-      <div class="white-chonk white-chonk--thicc"></div>
+<!-- <div class="section breakout"> -->
+  <div class="keyboard">
+    <div class="keyboard__keys">
+      <div class="octave">
+        <div class="white-key C"></div>
+        <div class="black-key C#"></div>
+        <div class="white-key D"></div>
+        <div class="black-key D#"></div>
+        <div class="white-key E"></div>
+        <div class="white-key F"></div>
+        <div class="black-key F#"></div>
+        <div class="white-key G"></div>
+        <div class="black-key G#"></div>
+        <div class="white-key A"></div>
+        <div class="black-key A#"></div>
+        <div class="white-key B"></div>
+        <div class="octave-overlay">
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+        </div>
+      </div>
+      <div class="octave">
+        <div class="white-key C"></div>
+        <div class="black-key C#"></div>
+        <div class="white-key D"></div>
+        <div class="black-key D#"></div>
+        <div class="white-key E"></div>
+        <div class="white-key F"></div>
+        <div class="black-key F#"></div>
+        <div class="white-key G"></div>
+        <div class="black-key G#"></div>
+        <div class="white-key A"></div>
+        <div class="black-key A#"></div>
+        <div class="white-key B"></div>
+        <div class="octave-overlay">
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--skinny"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+          <div class="white-chonk white-chonk--thicc"></div>
+        </div>
+      </div>
     </div>
-
-    <!-- I think the way that this works is  -->
   </div>
+<!-- </div> -->
 
-</div>
-
+<div style="height: 200rem"></div>
 
 <script src="/javascripts/blocks/transform-keyboard.js"></script>
