--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -24,4 +24,4 @@
 @import "custom/practice-sessions-index.css.scss";
 @import "custom/practice-session-show.css.scss";
 @import "custom/progress.css.scss";
-@import "custom/animate.css.scss";
+// @import "custom/transform-keyboard.css.scss";
