--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -1,7 +1,7 @@
 .hero {
   background-color: #848484;
   padding-top: 8rem;
-  height: 800px;
+  height: 1700px;
 }
 .hero__text {
   color: #fff;
@@ -16,15 +16,18 @@
 .hero__text--black {
   font-weight: 700;
 }
-.hero__image {
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-  padding: 0 1rem 0;
-  // @media screen and (min-width: 641px) {
-  //   padding: 8rem 8rem 0;
-  // }
+.hero__text--first {
+  margin-top: 5rem;
 }
+// .hero__image {
+//   margin: 0 auto;
+//   overflow: hidden;
+//   position: relative;
+//   padding: 0 1rem 0;
+//   // @media screen and (min-width: 641px) {
+//   //   padding: 8rem 8rem 0;
+//   // }
+// }
 
 
 .section {
@@ -105,4 +108,140 @@
 }
 .email-link {
   
+}
+
+
+
+
+// Keyboard transform
+.keyboard {
+  display: flex;
+  justify-content: center;
+  margin: 0 5vw;
+  background-color: #343434;
+  height: 20vw;
+  width: 90vw;
+  border-radius: 10px;
+  position: fixed;
+  align-items: flex-start; 
+}
+
+.keyboard__keys {
+  justify-content: space-between;
+  display: flex;
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  top: 17%;
+  bottom: -2%;
+}
+
+.octave {
+  // width: 717px;
+  // height: 455px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: relative;
+  align-self: center;
+}
+
+.octave-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.black-key {
+  width: 12.52%;
+  height: 60%;
+  margin: 0 1.5px;
+  background-color: #242424;
+  border-radius: 2px;
+}
+
+.white-key {
+  width: 12.52%;
+  height: 100%;
+  margin: 0 3px;
+  background-color: #FFFFFF;
+  border-radius: 2px;
+}
+
+.white-chonk {
+  height: 39%;
+  margin: 0 3px;
+  background-color: #FFFFFF;
+  border-radius: 2px;
+}
+
+.white-chonk--skinny {
+  width: 21.3%;
+}
+
+.white-chonk--thicc {
+  width: 22.4%;
+}
+
+.keyboard-space {
+  // height: 100vh;
+  height: 40rem;
+}
+
+body.index {
+  scroll-behavior: smooth;
+}
+
+
+
+/* Animation */
+
+@keyframes fadeInUp {
+  from {
+    transform: translate3d(0,40px,0)
+  }
+
+  to {
+    transform: translate3d(0,0,0);
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+    transform: translate3d(0,40px,0)
+  }
+
+  to {
+    transform: translate3d(0,0,0);
+    opacity: 1
+  }
+}
+
+// .animated {
+//   animation-duration: 500ms;
+//   animation-fill-mode: both;
+//   -webkit-animation-duration: 500ms;
+//   -webkit-animation-fill-mode: both
+// }
+
+// .animatedFadeInUp {
+//   opacity: 0
+// }
+
+.pre-animation {
+  opacity: 0;
+}
+
+.fadeInUp {
+  opacity: 0;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
+  animation-duration: 500ms;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 500ms;
+  -webkit-animation-fill-mode: both
 }
