Fix scalability issues with the keyboard, determine scrolling location for keyboard.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,11 +10,12 @@ title: The Linear Isomorphic Keybaord
 <!-- Hero -->
 <div class="hero">
   <h1 class="hero__text hero__text--first fadeInUp">
+    <br>
     Is there a better way to design the piano?
   </h1>
   <%= partial "/partials/keyboard" %>
   <div class="keyboard-space"></div>
-  <h1 class="hero__text fadeInUp">
+  <h1 class="hero__text hero__text--second fadeInUp">
     This is the<br><span class="hero__text--black">Linear Isomorphic Keyboard</span>
   </h1>
 </div>
