--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -1,7 +1,7 @@
 .hero {
   background-color: #848484;
   // padding-top: 8rem;
-  height: 1700px;
+  // height: 1700px;
 }
 .hero__text {
   color: #fff;
@@ -10,9 +10,10 @@
   // font-size: 72px;
   font-size: 50px;
   font-weight: 400;
-  margin-top: 0;
+  margin: 0;
   line-height: 1.3;
   padding-top: 12rem;
+  padding-bottom: 1rem;
 }
 .hero__text--black {
   font-weight: 700;
@@ -23,6 +24,7 @@
 
 .hero__text--second {
   // margin-top: 10rem;
+  opacity: 0;
 }
 
 // .hero__image {
@@ -194,7 +196,12 @@
 
 .keyboard-space {
   // height: 100vh;
-  height: 12rem;
+  height: 20rem;
+}
+
+.keyboard-container {
+  position: relative;
+  height: 60vh;
 }
 
 body.index {
