Change styles for index page shenanigans. Change to darker gray. Add description text for articles.

--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -97,7 +97,7 @@ schedule I came up with:
 
 -   10 minutes of sight reading
 
--   10 minutes of melodic transcription
+-   10 minutes of playing by ear
 
 **Edit from 4/29/19**: And I never actually practiced that curriculum. I changed the curriculum for my first practice session, and after a few sessions I have settled with this schedule:
 
@@ -107,7 +107,7 @@ schedule I came up with:
 
 -   15 minutes of sight reading
 
--   15 minutes of melodic transcription
+-   15 minutes of playing by ear
 
 I have been practicing considerably more than I initially planned, so I
 now play each keyboard for an hour. On top of this, I am not practicing
