--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -61,14 +61,14 @@ title: The Linear Isomorphic Keybaord
 
   <div class="row" style="margin-top: 2rem;">
     <div class="col-6">
-      <h3 class="articles-title">Reflections</h3>
+      <a href="/articles#reflections"><h3 class="articles-title">Reflections</h3></a>
       <div class="articles">
         <div class="article">
           <a href="/reflections/reflection-3">
             <h4 class="article__title">Reflection #3: 33 Hours</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;The Linear Isomorphic Keyboard has overtook the Traditional Keyboard in its ability to play major scales, but it made no measurable improvement on Hanon whatsoever. I reflect on why this might be, as well as strategies for sight reading and playing by ear that are tailored to each keyboard.
               </div>
             </div>
           </a>
@@ -78,7 +78,7 @@ title: The Linear Isomorphic Keybaord
             <h4 class="article__title">Reflection #2: 15 Hours</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;With fifteen hours of practice on each keyboard, the Traditional Keyboard steadily improves at fundamentals, while the Linear Isomorphic Keyboard hase barely made progress. I reflect on how I can improve exercises that use software, as well as my philosophy of how I should practice to improve depending on the content.
               </div>
             </div>
           </a>
@@ -88,7 +88,7 @@ title: The Linear Isomorphic Keybaord
             <h4 class="article__title">Reflection #1: The Assessment</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.
               </div>
             </div>
           </a>
@@ -99,14 +99,14 @@ title: The Linear Isomorphic Keybaord
       </div>
     </div>
     <div class="col-6">
-      <h3 class="articles-title">Articles</h3>
+      <a href="/articles"><h3 class="articles-title">Articles</h3></a>
       <div class="articles"> 
         <div class="article">
           <a href="/articles/the-idea">
             <h4 class="article__title">The Idea</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;Why the new keyboard and why the site? The Traditional Keyboard design was fantastic for its time, but music changed radically since, and now the Linear Isomorphic Keyboard offers a possible improvement. This short article describes history of the old, potential for the new, and a transparent experiment that could tell us if we should change the way we design the keyboard.
               </div>
             </div>
           </a>
@@ -116,7 +116,7 @@ title: The Linear Isomorphic Keybaord
             <h4 class="article__title">The Hypotheses</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;Why would the Linear Isomorphic Keyboard perform better than the traditional keyboard? I have a handful of theories about how the Linear Isomorphic Keyboard will compare to the Traditional Keyboard, and these hypotheses are based on yet another hypothesis: the isomorphic advantage. With words, graphs, and charts, I attempt to explain my predictions for the experiment.
               </div>
             </div>
           </a>
@@ -126,7 +126,7 @@ title: The Linear Isomorphic Keybaord
             <h4 class="article__title">The Experiment</h4>
             <div class="row justify-content-center">
               <div class="col-10 article__description">
-                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+                &nbsp;&nbsp;&nbsp;&nbsp;How do you compare compare the “playability” of two keyboards, and what even is “playability”? In this article I define this metric of comparison, explain how I will practice and measure improvement, and reflect on flaws in the experiment.
               </div>
             </div>
           </a>
