--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,5 +1,5 @@
 <nav class="navbar container navbar--translucent">
-  <div class="navbar__logo "><a href="/"><%= svg "LIK-logo" %></a></div>
+  <div class="navbar__logo "><a href="/"><%= svg "LIK-logo--dark" %></a></div>
   <ul class="navbar__nav ">
     <li class="navbar__item">
       <%= link_to "Articles", "/articles", {class: "navbar__link" } %>
