--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-color: #848484;
+  background-color: #5f5f5f;
   // padding-top: 8rem;
   // height: 1700px;
 }
@@ -18,12 +18,8 @@
 .hero__text--black {
   font-weight: 700;
 }
-.hero__text--first {
-  // margin-top: 5rem;
-}
-
+.hero__text--first {}
 .hero__text--second {
-  // margin-top: 10rem;
   opacity: 0;
 }
 
@@ -196,12 +192,12 @@
 
 .keyboard-space {
   // height: 100vh;
-  height: 20rem;
+  height: 30rem;
 }
 
 .keyboard-container {
   position: relative;
-  height: 60vh;
+  height: 75vh;
 }
 
 body.index {
