--- a/source/stylesheets/custom/_practice-session-show.css.scss
+++ b/source/stylesheets/custom/_practice-session-show.css.scss
@@ -10,7 +10,7 @@
   .practice-session__header-date {
     display: inline-block;
     font-size: 75px;
-    color: #838383;
+    color: $color-gray;
   }
   .practice-session__notes {
     font-weight: 400;
@@ -33,11 +33,11 @@
   }
   .domain-header__time,
   .total-header__time {
-    color: #838383;
+    color: $color-gray;
   }
   .domain-header__divider {
     flex-grow: 1;
-    border-bottom: 6px solid #838383;
+    border-bottom: 6px solid $color-gray;
     margin: 0 1.5rem 2.1rem;
   }
 
@@ -55,11 +55,11 @@
     font-weight: 100;
   }
   .exercise-set__time {
-    color: #838383;
+    color: $color-gray;
   }
   .exercise-set__divider {
     flex-grow: 1;
-    border-bottom: 3px solid #838383;
+    border-bottom: 3px solid $color-gray;
     margin:  0 1.5rem 1.3rem;
   }
 
@@ -75,7 +75,7 @@
   .exercise-set__increments-summary {
     max-width: 10rem;
     text-align: right;
-    color: #838383;
+    color: $color-gray;
     font-size: 16px;
   }
 
