Revise summaries for articles. Edit progress description. Add labels to charts. Add alternating method for labels.

--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -47,7 +47,7 @@ layout: layout
         <ul>
           <li class="article">
             <a href="/reflections/reflection-1/">
-              <h2 class="article__title">Reflection #1: the assessment</h2>
+              <h2 class="article__title">Reflection #1: The Assessment</h2>
               <div class="">&nbsp;&nbsp;&nbsp;&nbsp;The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.</div>
             </a>
           </li>
