--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -4,7 +4,7 @@
   <h1 class="section__header">Progress</h1>
   <div class="section__content">
     <div class="row">
-      <div class="col progress__description">REVISE In order to measure progress I defined increments of difficulty for each exercise. Often these increments are just increasing tempos, but the increments for sight reading and playing by ear can be a little more complex. When I practice I am always working towards the next increment of difficulty, and I take note whenever I can perform the increment. The charts below show how many increments I have been able to perform at each practice session.</div>
+      <div class="col progress__description">In order to my ability to play each keyboard, I have defined many increments of difficulty for each exercise I will practice. Often these increments are just increasing tempos, but the increments for sight reading and playing by ear can change other attributes such as the size of the largest increment. The charts below show the cumulative number of increments I was able to play for each practice session.</div>
     </div>
     
     <div class="row">
@@ -47,7 +47,7 @@
             <div class="chart--medium" data-exercise-set="<%= exercise_set[:name] %>"></div>
           </div>
           <script>
-            var chartData = <%= exercise_set_progress(exercise_set).to_json %>
+            var chartData = <%= alternate_labels(exercise_set_progress(exercise_set)).to_json %>
             new Chartist.Line(document.querySelector('[data-exercise-set="<%= exercise_set[:name] %>"]'), chartData, basicOptions);
           </script>
         <% end %>
