Add chart styles for better rendering.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -41,7 +41,7 @@ title: The Linear Isomorphic Keybaord
   </div>
 
   <div class="row">
-    <div class="col-12 ct-chart chart--medium progress-chart"></div>
+    <div class="col-12 ct-chart ct-chart--full progress-chart"></div>
   </div>
 
   <div class="row">
