--- a/source/reflections/reflection-2.html.md.erb
+++ b/source/reflections/reflection-2.html.md.erb
@@ -21,7 +21,7 @@ I also am making an assumption on the LIK that in order to say that I can play t
 Overall, I think that my improvement on the major scale is going slower than expected for the LIK, but it still isn't shocking. I am most surprised by the difficulty of playing with my eyes closed on the LIK.
 
 
-<div class="reflection-chart scales-chart"></div>
+<div class="ct-chart ct-chart--article scales-chart"></div>
 
 <% scales = data.exercise_sets.find { |es| es.name == "Scales & Arpeggios" } %>
 <script>
@@ -37,7 +37,7 @@ Hanon is very difficult for the LIK. Hanon on the TK has one ascending pattern t
 
 The very reason this exercise is difficult for the LIK is the reason why it is exciting. I feel as if I am training my ears to better recognize these small intervals, and better training my fingers to play these intervals on command. It makes me wonder how difficult the next exercises will be once I can play this up to tempo, as Hanon exercises share a lot of similarities.
 
-<div class="reflection-chart hanon-chart"></div>
+<div class="ct-chart ct-chart--article hanon-chart"></div>
 
 <% hanon = data.exercise_sets.find { |es| es.name == "Hanon" } %>
 <script>
@@ -50,7 +50,7 @@ The very reason this exercise is difficult for the LIK is the reason why it is e
 Sight reading is going about as I expected to go: considerably better for the traditional keyboard than for the LIK. The LIK is fine if the ambitus isn't much larger than a 5th, because then it allow me to set my hands before I sight read, mostly noting the intervals (whether it is stepwise or a leap) rather than paying attention to the notes or the exact intervals (whether an interval is a minor or major second).
 
 
-<div class="reflection-chart sight-reading-chart"></div>
+<div class="ct-chart ct-chart--article sight-reading-chart"></div>
 
 <% sight_reading = data.exercise_sets.find { |es| es.name == "EarMaster Sight Reading" } %>
 <script>
@@ -66,7 +66,7 @@ I predicted that the LIK would improve faster than the TK, though I am not surpr
 
 The thing that has surprised me the most with these exercises is the extent that I understand the questions as functions of key they are in. When I would play by ear on saxophone, I had much less of an idea as to where I was in the scale, and I would play with more instinct than understanding. My assumption is that the more that this tonal awareness is a factor, the less of an advantage the LIK will have when it comes to playing by ear.
 
-<div class="reflection-chart playing-by-ear-chart"></div>
+<div class="ct-chart ct-chart--article playing-by-ear-chart"></div>
 
 <% playing_by_ear = data.exercise_sets.find { |es| es.name == "EarMaster Playing By Ear" } %>
 <script>
