--- a/source/reflections/reflection-3.html.md.erb
+++ b/source/reflections/reflection-3.html.md.erb
@@ -14,7 +14,7 @@ I have practiced roughly 33 hours on each keyboard, and the results are already 
 
 The thirty second practice session marked an important point in the progress of the LIK: in regard to the number of completed intervals, my ability to play major scales on the LIK has surpassed my ability to play the major scale on the TK. The improvement of the LIK on major scales started slow as I had difficulty with the fingerings (and still do), but once I was able to play the major scale without looking at 60bpm, the LIKstarted completing many increments. I completed five increments in the first 19 practice sessions (4 hours and 45 minutes of practice), and then I completed another 116 increments in the next 14 practice sessions (3 hours and 30 minutes of practice). To average this out, in the last 14 practice sessions, I've been improving at a rate of 8.29 (116 / 14) increments per practice session, while the TK is sitting at 1.9 (63 / 33) increments per practice session.
 
-<div class="reflection-chart scales-chart"></div>
+<div class="ct-chart ct-chart--article scales-chart"></div>
 
 <% scales = data.exercise_sets.find { |es| es.name == "Scales & Arpeggios" } %>
 <script>
@@ -32,7 +32,7 @@ The TK is improving at a pretty constant rate while the LIK hasn't had any notab
 
 On the TK I can play the C major scale with sixteenth notes at 80bpm, and I can play the Hanon exercises right around that speed. The LIK can only play the C major scale at 100bpm in eighth notes, so I would expect that the LIK would have to be able to play at least sixteenth notes at 60bpm to play the first (and slowest) Hanon increment. However, currently I can play the C Major scale at 100bpm (eighth notes), but I can only play the first exercise with eighth notes at 69 bpm. I think that the reason for this is that Hanon is more complex on the LIK.
 
-<div class="reflection-chart hanon-chart"></div>
+<div class="ct-chart ct-chart--article hanon-chart"></div>
 
 <% hanon = data.exercise_sets.find { |es| es.name == "Hanon" } %>
 <script>
@@ -48,7 +48,7 @@ My hypothesis is that I am still improving at the rate of 2.33 times the speed o
 
 Since removing sixteenth notes from the exercises, both the TK and the LIK have begun improving at a steady pace with the TK consistently in the lead. Currently the LIK has completed seven increments while the TK has completed twelve. Eighteen practice sessions ago the gap was two increments apart, and the gap has widened to five increments.
 
-<div class="reflection-chart sight-reading-chart"></div>
+<div class="ct-chart ct-chart--article sight-reading-chart"></div>
 
 <% sight_reading = data.exercise_sets.find { |es| es.name == "EarMaster Sight Reading" } %>
 <script>
