--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -54,7 +54,7 @@
   }
 
   ul.ct-legend {
-    margin: 1rem 0;
+    margin: 0;
   }
 
   .footnotes {
@@ -68,10 +68,10 @@
     margin-right: calc(-50vw + 50%);
   }
 
-  .reflection-chart {
-    height: 20rem;
-    margin: 4rem 0 8rem;
-  }
+  // .reflection-chart {
+  //   height: 20rem;
+  //   margin: 4rem 0 8rem;
+  // }
 
   .image-container {
     display: flex;
