Replace legend in the hypotheses article.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -212,7 +212,7 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
   </div>
 
   <div class="legend-container">
-    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
+    <img src="/images/legend.svg" alt="Legend for intervals-shapes graph" class="legend"/>
   </div>
 
   <h3 class="intervals-shapes-graph__label">LIK</h3>
