Rename/organize images.

--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -23,7 +23,7 @@ We can do better. Make all keys equal, and in the process, make all keys the sam
 
 <% end %>
 
-<%= image_tag "LIK-hero.png" %>
+<%= image_tag "lik-picture.png" %>
 
 <% partial "/partials/article-layout" do %>
 
