--- a/source/stylesheets/_general.css.scss
+++ b/source/stylesheets/_general.css.scss
@@ -27,3 +27,8 @@ a:hover {
 img {
   max-width: 100%;
 }
+
+// Makes it easy to change the color of the logo
+.logo__gray-bit {
+  fill: $color-gray;
+}
