--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -97,122 +97,122 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
     </div>
     <div class="nodes shapes">
       <div class="node" id="recwYr1BR7SJOhV2K" name="WB1">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">1</span>
       </div>
       <div class="node" id="recpPTjrPCoWEqHqc" name="BW1">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">1</span>
       </div>
       <div class="node" id="recuYrPcvwNMSr4Sy" name="WW2">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">2</span>
       </div>
       <div class="node" id="recstZnrrXgGG0YOa" name="BB2">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">2</span>
       </div>
       <div class="node" id="reca2z9JHoJ599b0e" name="WB3">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">3</span>
       </div>
       <div class="node" id="recVEelstSUtfbWsw" name="BW3">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">3</span>
       </div>
       <div class="node" id="recI4GQgm65zG0mWf" name="WW4">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">4</span>
       </div>
       <div class="node" id="recIhXSA4YZRwrq4w" name="BB4">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">4</span>
       </div>
       <div class="node" id="recG4t1WiOR1DM2tc" name="WB5">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">5</span>
       </div>
       <div class="node" id="reclgFxnI22C1BFhd" name="BW5">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">5</span>
       </div>
       <div class="node" id="rec9HUG3nu1eZHs1L" name="WW6">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">6</span>
       </div>
       <div class="node" id="recEVTjwd7ySM8R4J" name="BB6">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">6</span>
       </div>
       <div class="node" id="rec7EU4KfVep7D6Sa" name="WB7">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">7</span>
       </div>
       <div class="node" id="recBxv0fvY0pkuVkJ" name="BW7">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">7</span>
       </div>
       <div class="node" id="recY743bibqUglxhX" name="WW8">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">8</span>
       </div>
       <div class="node" id="rectMuASyozV4jN2j" name="BB8">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">8</span>
       </div>
       <div class="node" id="rec4lvBafSjpf6iUm" name="WB9">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">9</span>
       </div>
       <div class="node" id="recOz4xQj9DEV4olt" name="BW9">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">9</span>
       </div>
       <div class="node" id="recQVcnBLRQycKSkz" name="WW10">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">10</span>
       </div>
       <div class="node" id="recxRi3kOFTsWucav" name="BB10">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">10</span>
       </div>
       <div class="node" id="recwgjsitkTZuMC7l" name="WB11">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">11</span>
       </div>
       <div class="node" id="recB9zg5H5TwGtp7e" name="BW11">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">11</span>
       </div>
       <div class="node" id="recppuCcNqM6FkJyH" name="WW12">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">12</span>
       </div>
       <div class="node" id="recBe3PY2ElHu4G6x" name="BB12">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">12</span>
       </div>
       <div class="node" id="reciaFs54NU3QcW5a" name="WB13">
-        <div class="node__visual"><%= svg "wb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
         <span class="label-temp">13</span>
       </div>
       <div class="node" id="recwnb2NblRpgcTQH" name="BW13">
-        <div class="node__visual"><%= svg "bw-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
         <span class="label-temp">13</span>
       </div>
       <div class="node" id="recCBGfwxnRisN5v6" name="WW14">
-        <div class="node__visual"><%= svg "ww-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
         <span class="label-temp">14</span>
       </div>
       <div class="node" id="recwkWJhG5WlEHqAw" name="BB14">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">14</span>
       </div>
     </div>
   </div>
 
   <div class="legend-container">
-    <img src="/images/legend.svg" alt="Legend for intervals-shapes graph" class="legend"/>
+    <img src="/images/interval-chart/legend.svg" alt="Legend for intervals-shapes graph" class="legend"/>
   </div>
 
   <h3 class="intervals-shapes-graph__label">LIK</h3>
@@ -270,51 +270,51 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
 
     <div class="nodes shapes">
       <div class="node" id="lik-1">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">1</span>
       </div>
       <div class="node" id="lik-2">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">2</span>
       </div>
       <div class="node" id="lik-3">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">3</span>
       </div>
       <div class="node" id="lik-4">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">4</span>
       </div>
       <div class="node" id="lik-5">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">5</span>
       </div>
       <div class="node" id="lik-6">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">6</span>
       </div>
       <div class="node" id="lik-7">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">7</span>
       </div>
       <div class="node" id="lik-8">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">8</span>
       </div>
       <div class="node" id="lik-9">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">9</span>
       </div>
       <div class="node" id="lik-10">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">10</span>
       </div>
       <div class="node" id="lik-11">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">11</span>
       </div>
       <div class="node" id="lik-12">
-        <div class="node__visual"><%= svg "bb-circle" %></div>
+        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
         <span class="label-temp">12</span>
       </div>
     </div>
@@ -406,13 +406,13 @@ In the previous iteration, I predicted that the LIK would outperform the TK on f
 
 
     <div>
-    <img src="/images/first-fingering.svg" style="width: 50%; margin: 0 0 2rem;" />
+    <img src="/images/fingerings/first-fingering.svg" style="width: 50%; margin: 0 0 2rem;" />
     </div>
 
     But if you wanted to complete the major scale, you would finger the same shape as 1-2-3-1-2, so that you could finish the scale with 3-4-5.
 
     <div>
-    <img src="/images/second-fingering.svg" style="margin: 0 0 2rem;"/>
+    <img src="/images/fingerings/second-fingering.svg" style="margin: 0 0 2rem;"/>
     </div>
 
     The shape is the same, but the fingering is different.
