Apply chart styles to improvement chart in the hypotheses article.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -341,7 +341,7 @@ As there are 2.33 times more shapes on the TK than the LIK, I predict that the T
 
 <% end %>
 
-<div class="improvement-chart chart--medium breakout">
+<div class="improvement-chart ct-chart ct-chart--full breakout">
 </div>
 
 <% partial "/partials/article-layout" do %>
