--- a/source/stylesheets/custom/_the-hypotheses.css.scss
+++ b/source/stylesheets/custom/_the-hypotheses.css.scss
@@ -74,7 +74,8 @@
   // Improvement chart
   .improvement-chart {
     padding: 0 1rem;
-    margin-bottom: 8rem;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
 
   // Custom colors for improvement chart
