Remove vestigal comments

--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -23,17 +23,7 @@
   opacity: 0;
 }
 
-// .hero__image {
-//   margin: 0 auto;
-//   overflow: hidden;
-//   position: relative;
-//   padding: 0 1rem 0;
-//   // @media screen and (min-width: 641px) {
-//   //   padding: 8rem 8rem 0;
-//   // }
-// }
-
-
+// This should not be in index
 .section {
   margin-top: 8rem;
 }
@@ -224,17 +214,6 @@ body.index {
     opacity: 1
   }
 }
-
-// .animated {
-//   animation-duration: 500ms;
-//   animation-fill-mode: both;
-//   -webkit-animation-duration: 500ms;
-//   -webkit-animation-fill-mode: both
-// }
-
-// .animatedFadeInUp {
-//   opacity: 0
-// }
 
 .pre-animation {
   opacity: 0;
